# readme

./: .gitignore  AGENTS.md  PROTOTYPE_PLAN.md  PROTOTYPE_PLAN_UPDATED.md  README.md  SETUP.md  TRAINING_AGENDA.md  bot.py  docker-compose.yaml  notes.md  ruff.toml  skills-lock.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
client/: README.md  dev.Dockerfile  env.example  middleware.ts  openapi.json  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
docs/: architecture.md  deployment-guide.md  integration-testing.md  pipecat-cloud-deployment-guide.md  release-env-matrix.md  todo-visual-design-review.md  ux-design.md
infra/: __init__.py  common.py  main.py  modal_api.py  modal_jobs.py  pyproject.toml  setup_storage.py
scripts/: export_openapi.py  fix_test_household.sql  load_chunks_to_supabase.py  process_pdf_from_supabase.py  setup-git-hooks.sh
server/: Dockerfile  README.md  bot.py  dev.Dockerfile  env.example  notes2.md  pcc-deploy.toml  pyproject.toml  settings.toml
server/api/: Dockerfile  admin.py  deps.py  main.py  start.py
server/api/migrations/: 0001_books.sql  0002_book_chunks.sql  0003_reading_progress.sql
server/api/routers/: admin.py  books.py  kids.py  start.py
server/api/services/: daily.py
server/bot/: Dockerfile  bot.py  library.py  prompt.py  supabase_client.py
server/bot/processors/: book_reader.py  flow.md  frames.py  state_manager.py
server/scripts/: record_fixtures.py  record_llm_outputs.py
server/services/: daily.py  spawn_modal_job.py
server/services/pdf_pipeline/: _gemini.py  extract.py  storage.py
server/shared/: books.py  call_state.py  config.py  supabase.py
server/tests/: README.md  test_config.py
server/tests/api/: conftest.py  test_admin.py  test_kids.py  test_main.py  test_start.py
server/tests/api/routers/: test_start_params.py
server/tests/bot/: conftest.py  test_book_reader.py  test_library.py  test_state_manager.py  test_supabase_client.py
server/tests/fixtures/: README.md
server/tests/services/: test_chunk.py  test_extract.py  test_integration.py  test_models.py  test_storage.py  test_worker_tasks.py
server/tests/shared/: test_call_state.py
server/tests/workers/: test_book_processor_jobs.py  test_book_processor_jobs_replay.py
server/tests/workers/pdf_pipeline/: test_extract.py  test_storage.py
server/tests/workers/recordings/: README.md
server/tests/workers/recordings/alice_in_wonderland/: chunks_chapter_00.json  chunks_chapter_01.json  chunks_chapter_02.json  chunks_chapter_03.json  chunks_chapter_05.json  clean_batch_01.txt  clean_batch_02.txt  detected_chapters.json  expected_chunks.json
server/worker/: Dockerfile  __init__.py  tasks.py
server/workers/: book_processor_jobs.py
server/workers/pdf_pipeline/: __init__.py  _gemini.py  chunk.py  extract.py  models.py  storage.py
(+144 files in other folders)
