[project]
name = "readme-infra"
version = "0.1.0"
description = "Modal deployment entrypoints for readme"
requires-python = ">=3.13"
dependencies = [
    "modal>=1.1.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
