[project]
name = "readme-server"
version = "0.1.0"
description = "Kid Reading Voice App – server (API + bot)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
    "pipecat-ai[daily,webrtc,deepgram,google,cartesia,runner,silero]>=0.0.104",
    "pipecatcloud>=0.2.6",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.0",
    "aiortc>=1.14.0",
    "dramatiq[redis]>=1.18.0",
    "PyMuPDF>=1.24.0",
    "google-genai>=1.63.0",
    "pydantic>=2.0.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
    "ty>=0.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
